syntax = "proto3";

package ci.tasklets.run_ci_action;

import "ci/tasklet/common/proto/service.proto";
import "tasklet/api/tasklet.proto";

// Main config
message Config {
    string action_path = 1; //for example /ci/a.yaml
    string action_id = 2;
    string execution_timeout = 3;
    CiEnvironment environment = 4;

    // flow_vars value for flow, must be passed as JSON string
    string flow_vars = 5;

    enum CiEnvironment {
        CURRENT = 0;
        STABLE = 1;
        TESTING = 2;
    }
}


message Input {
    ci.TaskletContext context = 1;

    Config config = 2;
}

message Output {
}
